- Fixed box resizing - Fixed wrong button width - Fixed input alignment - Fixed a few minor bugs

--- a/public/stylings/auth/register.css
+++ b/public/stylings/auth/register.css
@@ -1,21 +1,19 @@
-body,
-html {
+* {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  min-height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
   font-family: 'poppins', Sans-Serif;
   /* Prevents any scrolling issues */
-  box-sizing: border-box;
 }
 
 .container {
-  position: relative;
-  width: 100%;
-  max-width: 2000px;
-  margin: 0 auto;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -25,12 +23,11 @@ html {
 }
 
 .auth-container {
-  display: flex;
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  width: 70%;
-  padding: 15px 15px 70px 15px;
+  width: 90%;
+  padding: 30px 40px;
   border: 3px solid white;
   backdrop-filter: blur(5px);
   border-radius: 10px;
@@ -46,15 +43,14 @@ html {
 .input-container {
   position: relative;
   display: flex;
-  width: 100%;
   flex-direction: column;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
   margin: 30px 0;
 }
 
 .input-container input {
-  width: 85%;
+  width: 100%;
   height: 100%;
   background: transparent;
   border: none;
@@ -76,7 +72,7 @@ html {
   justify-content: space-between;
   vertical-align: middle;
   font-size: 14.5px;
-  margin: -15px 0px 15px;
+  margin: -5px 0px 20px;
   line-height: 0;
 }
 
@@ -114,6 +110,7 @@ html {
 }
 
 .register-btn {
+  width: 100%;
   background-color: deepskyblue;
   color: white;
   border: none;
